Fixed some spacing issues

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -280,9 +280,9 @@ flex-direction: column-reverse;}
   display:block;
 }
 .writeup  h1{
-  margin-top:0rem;
+  margin-top:1rem;
   color:#F1DAC4;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 .writeup .title {
   color:var(--white);
